[project]
name = "wisey-queves"
version = "0.1.0"
description = "Kafka consumer/producer utilities for Wisey microservices"
authors = [
    { name = "xxykzdev", email = "xxykzdev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
